<resources>
    <string name="app_name">Fitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="description">Don\'t worry if you have trouble determining your goals, We can help you determine your goals and track your goals</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hey_there">Hey There,</string>
    <string name="first_name"><font size="14">First Name</font></string>
    <string name="last_name"><font size="14">Last Name</font></string>
    <string name="email"><font size="14">Email</font></string>
    <string name="password"><font size="14">Password</font></string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="complete_profile">Let’s complete your profile</string>
    <string name="more_about">It will help us to know more about you!</string>
    <string name="date_of_birth"><font size="14">Date of Birth</font></string>
    <string name="your_weight"><font size="14">Your Weight</font></string>
    <string name="your_height"><font size="14">Your Height</font></string>
    <string name="next">Next</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="your_goal">What is your goal ?</string>
    <string name="program">It will help us to choose a best \nprogram for you</string>
    <string name="welcome">Welcome, Stefani</string>
    <string name="description_text">You are all set now, let’s reach your \ngoals together with us</string>
    <string name="go_to_home">Go To Home</string>
    <string name="improve_shape">Improve Shape</string>
    <string name="card_description">I have a low amount of body fat and need / want to build more muscle</string>
    <string name="track_your_goal">Track Your Goal</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_backs">Welcome Back,</string>
    <string name="stefani_wong">Stefani Wong</string>
    <string name="bmi_body_mass_index">BMI(Body Mass Index)</string>
    <string name="normal_weight">You have a normal weight</string>
    <string name="today_target">Today Target</string>
    <string name="activity_status">Activity Status</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_78_bpm">78 BPM</string>
    <string name="water_intake">Water Intake</string>
    <string name="_4_liters">4 Liters</string>
    <string name="liters_left">2 liters \nleft</string>
    <string name="sleep">Sleep</string>
    <string name="_760_kcal">760 KCal</string>
    <string name="_230kcal_left">230kCal \nleft</string>
    <string name="_20minutes">20minutes</string>
    <string name="_180_calories_burn">180 Calories Burn</string>
    <string name="fullbody_workout">FullBody Workout</string>
    <string name="calories">Calories</string>
    <string name="notification">Notification</string>
    <string name="title">Hey, it’s time for lunch</string>
    <string name="about_1_minutes_ago">About 1 minutes ago</string>
    <string name="activity_tracker">Activity Tracker</string>
    <string name="foot_steps">Foot Steps</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="see_more">See more</string>
    <string name="activity_progress">Activity Progress</string>
    <string name="profile">Profile</string>
    <string name="lose_a_fat_program">Lose a Fat Program</string>
    <string name="_22yo">22yo</string>
    <string name="_180cm">180cm</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="account">Account</string>
    <string name="personal_data">Personal Data</string>
    <string name="achievement">Achievement</string>
    <string name="activity_history">Activity History</string>
    <string name="workout_history">Workout History</string>
    <string name="pop_up_notification">Pop-up Notification</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="congratulations">Congratulations, You Have \nFinished Your Workout</string>
    <string name="description_ecxcercise">Exercises is king and nutrition is queen. Combine the \ntwo and you will have a kingdom</string>
    <string name="daily_workout_schedule">Daily Workout Schedule</string>
    <string name="upcoming_workout">Upcoming Workout</string>
    <string name="today_03_00pm">Today, 03:00pm</string>
    <string name="what_do_you_want_to_train">What Do You Want to Train</string>
    <string name="_11_excercise">11 Excercise</string>
    <string name="latest_workout">Latest Workout</string>
    <string name="workout_tracker">Workout Tracker</string>
    <string name="_320_calories_burn">320 Calories Burn</string>
    <string name="schedule_workout">Schedule Workout</string>
    <string name="times">05/23, 09:00 AM</string>
    <string name="difficulity">Difficulity</string>
    <string name="beginner">Beginner</string>
    <string name="barbell">Barbell</string>
    <string name="exercises">Exercises</string>
    <string name="_3_sets">3 Sets</string>
    <string name="set_1">Set 1</string>
    <string name="warm_up">Warm Up</string>
    <string name="start_workout">Start Workout</string>
    <string name="you_ll_need">You\'ll Need</string>
    <string name="_5_items">5 Items</string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="easy">Easy</string>
    <string name="description_data">A jumping jack, also known as a star jump and called a side-straddle hop in the US military, is a physical jumping exercise performed by jumping to a position with the legs spread wide also known as a star jump and called a side-straddle hop in the US military</string>
    <string name="read_more">Read More</string>
    <string name="show_less">Show Less</string>
    <string name="how_to_do_it">How To Do It</string>
    <string name="custom_repetitions">Custom Repetitions</string>
    <string name="search_pancake"><font size="14">Search Pancake</font></string>
    <string name="recommendation_diet">Recommendation \nfor Diet</string>
    <string name="ingredients">Ingredients That You \nWill Need</string>
    <string name="details_workout">Details Workout</string>
    <string name="custom_weights">Custom Weights</string>
    <string name="choose_workout">Choose Workout</string>
    <string name="time">Time</string>
    <string name="thu_27_may_2023">Thu, 27 May 2023</string>
    <string name="upperbody_workout">Upperbody Workout</string>
    <string name="descriptions">Descriptions</string>
    <string name="step_by_step">Step by Step</string>
    <string name="_8_items">8 items</string>
    <string name="add_to_breakfast_meal">Add to Breakfast Meal</string>
    <string name="today_meal_nutritions">Today Meal Nutritions</string>
    <string name="breakfast">Breakfast</string>
    <string name="_2_meals">2 meals</string>
    <string name="_30mins">30mins</string>
    <string name="_05_00am">05:00am</string>
    <string name="bedtime">BedTime</string>
    <string name="_09_00_pm">09:00 PM</string>
    <string name="hours_of_sleep">Hours of Sleep</string>
    <string name="_8hours_30minutes">8hours 30minutes</string>
    <string name="repeat">Repeat</string>
    <string name="mon_to_fri">Mon to Fri</string>
    <string name="vibrate_when_alarm_sound">vibrate When Alarm Sound</string>
    <string name="save">Save</string>
    <string name="in_14hours_30minutes">in 14hours 30minutes</string>
    <string name="ideal_hours_for_sleep">Ideal Hours for Sleep</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="mon">Mon</string>
    <string name="_12">12</string>
    <string name="you_will_get_8hours_10minutes_for_tonight">You will get 8hours 10minutes \nfor tonight</string>
    <string name="_96">96%</string>
    <string name="bedtimes">Bedtime,</string>
    <string name="_09_00pm">09:00pm</string>
    <string name="reminder">Reminder!</string>
    <string name="next_photos_fall_on_july_08">Next Photos Fall On July 08</string>
    <string name="track_your_progress_each_month_with_photo">Track Your Progress Each \nMonth With Photo</string>
    <string name="daily_sleep_schedule">Daily Sleep Schedule</string>
    <string name="compare_my_photo">Compare my Photo</string>
    <string name="gallery">Gallery</string>
    <string name="_2_june">2 June</string>
    <string name="choose_month_1">Select Month 1</string>
    <string name="may">May</string>
    <string name="select_month">Select Month</string>
    <string name="average_progress">Average Progress</string>
    <string name="_62">62%</string>
    <string name="june">June</string>
    <string name="front_facing">Front Facing</string>
    <string name="meal_nutritions">Meal Nutritions</string>
    <string name="daily_meal_schedule">Daily Meal Schedule</string>
    <string name="today_meals">Today Meals</string>
    <string name="find_something_to_eat">Find Something to Eat</string>
    <string name="category">Category</string>
    <string name="popular">Popular</string>
    <string name="photo">Photo</string>
    <string name="statistic">Statistic</string>
    <string name="good">Good</string>
    <string name="compare">Compare</string>
    <string name="back_to_home">Back to Home</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="_33">33%</string>
    <string name="_67">67%</string>
    <string name="height_increase">Height Increase</string>
    <string name="_88">88%</string>
    <string name="twelve">12%</string>
    <string name="muscle_mass_increase">Muscle Mass Increase</string>
    <string name="_57">57%</string>
    <string name="_43">43%</string>
    <string name="abs">Abs</string>
    <string name="_89">89%</string>
    <string name="_11">11%</string>
    <string name="choose_month_2">Select Month 2</string>
    <string name="_450_calories_burn">450 Calories Burn</string>
    <string name="_20_times">20</string>
    <string name="_4_steps">4 Steps</string>
    <string name="wheat_flour">Wheat Flour</string>
    <string name="_12g">12g</string>
    <string name="_8_steps">8 Steps</string>
    <string name="bluebarry_pancake">BlueBarry Pancake</string>
    <string name="last_night_sleep">Last Night Sleep</string>
    <string name="_8h_20m">8h 20m</string>
    <string name="check">Check</string>
    <string name="weekly">Weekly</string>
    <string name="edit">Edit</string>
    <string name="view_more">View more</string>
    <string name="view">View</string>
    <string name="_180kcal">180kCal</string>
    <string name="learn_more">Learn More</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="_120_foods">120+ foods</string>
    <string name="_180kcals">180kCal</string>
    <string name="_32mins">32mins</string>
    <string name="easys">Easy</string>
    <string name="honey_pancake">Honey Pancake</string>
    <string name="by">by</string>
    <string name="james_ruth">James Ruth</string>
    <string name="nutrition">Nutrition</string>
    <string name="_6_items">6 items</string>
    <string name="year">Year</string>
    <string name="monthly">Monthly</string>

</resources>