<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingBottom="30dp"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/simpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/lightBlack"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/lightBlack"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleText"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email_icon"
        android:textCursorDrawable="@drawable/cursor_color"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@+id/createAccountText"
        android:layout_marginHorizontal="30dp"/>


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password_icon"
        android:drawableEnd="@drawable/hide_password"
        android:paddingEnd="16dp"
        android:textCursorDrawable="@drawable/cursor_color"
        android:hint="@string/password"
        android:paddingStart="16dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:textColorHint="@color/hintColor"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="11sp"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/register_button_background"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="300dp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginHorizontal="30dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.5dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@color/viewColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/lightBlack"
            android:text="@string/or" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1.5dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@color/viewColor"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/googleAndFacebookLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="130dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:src="@drawable/google_icon"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:src="@drawable/facebook_icon"/>
    </LinearLayout>

    <TextView
        android:id="@+id/dontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightBlack"
        android:text="Already"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/googleAndFacebookLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>