<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".PhotoFragment">


    <TextView
        android:id="@+id/averageProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_progress"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/lightBlack"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="Good"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/averageProgressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/averageProgressText" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:progress="62"
        android:layout_marginTop="10dp"
        android:progressDrawable="@drawable/vertical_progressbar"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/averageProgressText"
        app:layout_constraintTop_toBottomOf="@+id/averageProgressText" />

    <TextView
        android:id="@+id/percentageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/_62"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/loading"
        app:layout_constraintEnd_toEndOf="@+id/loading"
        app:layout_constraintStart_toStartOf="@+id/loading"
        app:layout_constraintTop_toTopOf="@+id/loading" />


    <TextView
        android:id="@+id/monthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/may"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/loading"
        app:layout_constraintTop_toBottomOf="@+id/loading" />


    <TextView
        android:id="@+id/nextMonthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/june"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/loading"
        app:layout_constraintTop_toTopOf="@+id/monthText" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photoResultRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/nextMonthText"
        app:layout_constraintStart_toStartOf="@+id/monthText"
        app:layout_constraintTop_toBottomOf="@+id/monthText" />

</androidx.constraintlayout.widget.ConstraintLayout>